...
                        child: Row(
                          children: [
                            Spacer(),
                            Icon(Icons.add),
                            Padding(
                              padding: const EdgeInsets.only(left: 5),
                              child: Text(AppLocalizations.of(context)?.addPassword ?? "Add a password",
                                  style: TextStyle(
                                    color: Colors.grey[800],
                                    fontSize: 18,
                                    fontWeight: FontWeight.bold,
                                  )),
                            ),
...
                          children: [
                            Spacer(),
                            Icon(Icons.storage),
                            Padding(
                              padding: const EdgeInsets.only(left: 5),
                              child: Text(
                                  AppLocalizations.of(context)?.viewAllPasswords ?? "View All Passwords",
                                  style: TextStyle(
                                    color: Colors.grey[800],
                                    fontSize: 18,
                                    fontWeight: FontWeight.bold,
                                  )),
                            ),
...
