...
      textDirection: TextDirection.ltr,
      child: MaterialApp(
        home: Scaffold(
          backgroundColor: Colors.grey[100],
          appBar: AppBar(
            title: Text(
              AppLocalizations.of(context)?.viewAllPasswords ?? "View all passwords",
            ),
            backgroundColor: Colors.red[800],
          ),
          body: !fetched
              ? const CircularProgressIndicator()
              : ListView.builder(
...
