...
class _FindPasswordPageState extends State<FindPasswordPage> {
  TextEditingController _passwordName = TextEditingController();
  TextEditingController _newpasswordName = TextEditingController();
  late var currentPasswordName;
  bool passwordSearched = false;
  List<dynamic> allPasswords = [];
  late String errorMessage = AppLocalizations.of(context)?.searchPasswords ?? "Password will show here";

  void findPassword() async {
    var toFind = _passwordName.text.trim();
    var url =
        "https://passwordmanagerapiead.azurewebsites.net/PasswordManager/api/Password/find/name?phoneId=${widget.androidId}&passwordName=$toFind";

...
